# netbox-acess-requests-plugin

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Makefile  README.md  TESTING.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yaml  publish-pypi.yaml
access_request_management/: __init__.py  bulk_import_forms.py  choices.py  filtersets.py  forms.py  graphql.py  mixins.py  models.py  navigation.py  search.py  services.py  tables.py  urls.py  utils.py  views.py
access_request_management/api/: __init__.py  serializers.py  urls.py  views.py
access_request_management/migrations/: 0001_initial.py  0002_alter_accessrequestperson_options.py  0003_accessrequestperson_status.py  0004_accessrequestperson_entry_status.py  __init__.py
access_request_management/static/css/: access_request.css
access_request_management/static/js/: access_member_list.js  access_request.js
access_request_management/templates/access_request_management/: access_member_list.html  access_request_history.html  accessrequest.html  accessrequestperson.html
access_request_management/templates/access_request_management/panels/: custom_attachments_panel.html
access_request_management/testing/: __init__.py  utils.py
access_request_management/tests/: __init__.py  test_api.py  test_graphql.py  test_models.py  test_views.py
access_request_management/ui/: panels.py  widgets.py
changelog/: index.html
contributing/: index.html
search/: search_index.json
testing/: configuration.py
tests/: __init__.py
